<resources>
    <string name="app_name">R&amp;D-PVCFC</string>
    <string name="error_message" translatable="false">Can\'t decrease more</string>
    <string name="counter" translatable="false">Counter:</string>
    <string name="counter_default_value" translatable="false">0</string>
    <string name="no_data">Not Signed In</string>
    <string name="sign_out">Sign Out</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="client_id" translatable="false">507803274390-do6ak7ko2d4hikn9ug5ko1476m82ktpd.apps.googleusercontent.com</string>
    <!--    <string name="client_id">923020971852-tdq46qksjsd2nm1lma8gh102hibpbi32.apps.googleusercontent.com</string>-->
    <string name="dont_have_account">Don\'t Have An Account?</string>
    <string name="already_have_account">Already Have An Account?</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="qr_code">QR Code</string>
    <string name="profile">Profile</string>
    <string name="logout">Đăng xuất</string>
    <string name="login_using_google">Đăng nhập bằng Google</string>
    <string name="create_test_template">Create test template</string>
    <string name="create_test">Tạo thí nghiệm</string>
    <string name="create_test_group">Tạo nhóm thí nghiệm</string>
    <string name="recent_search">Tìm kiếm gần đây</string>
    <string name="create_test_message">Tạo mới mẫu hay chọn mẫu có sẵn?</string>
    <string name="select_existed_template">Chọn mẫu có sẵn</string>
    <string name="create_new">Tạo mới</string>
    <string name="template_name">Tên mẫu thí nghiệm</string>
    <string name="col_name">Tên cột</string>
    <string name="col_type">Kiểu dữ liệu</string>
    <string name="drag_to_edit">Kéo để xoá hoặc đổi vị trí</string>
    <string name="dark_mode">Giao diện hệ thống / Chế độ tối</string>
    <string name="can_not_undo">Không thể khôi phục</string>
    <string name="undo">Khôi phục</string>
    <string name="setting">Cài đặt</string>
    <string name="add_template">Thêm mẫu</string>
    <string name="saved">Đã lưu!</string>
    <string name="please_fill_all_value">Vui lòng nhập tất cả giá trị trước khi lưu</string>
    <string name="template_manage">Quản lý mẫu thí nghiệm</string>
    <string name="test">Thí nghiệm</string>
    <string name="account">Tài khoản</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="test_name">Tên thí nghiệm</string>
    <string name="public_test">Công khai thí nghiệm</string>
    <string name="start_date">Ngày bắt đầu</string>
    <string name="end_date">Ngày kết thúc</string>
    <string name="notify_to_collect_data">Nhắc nhở thu thập dữ liệu</string>
    <string name="next_step">Tiếp theo</string>
    <string name="choose_template">Chọn mẫu thí nghiệm</string>
    <string name="manage_template">Quản lý mẫu</string>
    <string name="test_type">Loại thí nghiệm</string>
    <string name="can_not_establish_test">Không thể khởi tạo test.</string>
    <string name="table_data">Bảng dữ liệu</string>
    <string name="test_data">Dữ liệu thí nghiệm</string>
    <string name="backward">Trước</string>
    <string name="add_record">Thêm dữ liệu</string>
    <string name="forward">Sau</string>
    <string name="save">Save</string>
    <string name="qr_scan">Quét mã QR</string>
    <string name="sync_with_cloud">Đồng bộ với đám mây.</string>
    <string name="customize_theme">Tuỳ chỉnh giao diện</string>
    <string name="more">Thêm</string>
    <string name="private_manage">Quyền riêng tư</string>
    <string name="save_qr">Lưu mã QR vào điện thoại</string>
    <string name="qrshare">QR Code</string>
    <string name="share_link">Link</string>
    <string name="share">Chia sẻ</string>
    <string name="send">Gửi</string>
    <string name="can_not_found_test_list">Không tìm thấy bất kì thí nghiệm nào.\n\n Nếu chưa được cấp quyền truy cập hệ thống, nhấn vào nút bên dưới để yêu cầu sử dụng.</string>
    <string name="request_system_access">Yêu cầu quyền truy cập hệ thống.</string>
    <string name="request_specify_test_permission_or_create_test">Nếu đã được cấp quyền truy cập hệ thống nhưng không thấy danh sách thí nghiệm, \n vui lòng xin quyền truy cập thí nghiệm bạn cần thông qua liên kết, mã QR được chia sẻ bởi người quản lý thí nghiệm.</string>
</resources>