<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/templateItem"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/_10sdp"
    android:gravity="center"
    app:cardCornerRadius="@dimen/_10sdp"
    app:cardElevation="@dimen/_10sdp">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="marquee"
        android:singleLine="true"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintEnd_toStartOf="@+id/startTime"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/test_name" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toStartOf="@id/endTime"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name"
        tools:text="@string/test_type" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/startTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:singleLine="true"
        app:layout_constraintBottom_toTopOf="@id/divider1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/name"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/start_date" />

    <View
        android:id="@+id/divider1"
        android:layout_width="0dp"
        android:layout_height="@dimen/_1sdp"
        android:background="@color/HEADER_SECOND_TITLE"
        app:layout_constraintBottom_toTopOf="@id/endTime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/startTime"
        app:layout_constraintTop_toBottomOf="@id/startTime" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/endTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:singleLine="true"
        app:layout_constraintBottom_toBottomOf="@+id/type"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/type"
        app:layout_constraintTop_toBottomOf="@id/divider1"
        tools:text="@string/end_date" />

    <View
        android:id="@+id/divider2"
        android:layout_width="0dp"
        android:layout_height="@dimen/_1sdp"
        android:background="@color/HEADER_SECOND_TITLE"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/type" />

    <TextView
        android:id="@+id/testDataTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|start"
        android:layout_marginBottom="@dimen/_10sdp"
        android:text="@string/test_data"
        android:textSize="@dimen/_16sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider2"/>

    <cn.zhouchaoyuan.excelpanel.ExcelPanel
        android:id="@+id/testDataTable"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/divider3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/testDataTitle"
        app:layout_constraintVertical_bias="0.0"
        app:left_cell_width="@dimen/room_status_cell_length"
        app:normal_cell_width="@dimen/room_status_cell_length"
        app:top_cell_height="@dimen/room_status_cell_length" />

    <View
        android:id="@+id/divider3"
        android:layout_width="0dp"
        android:layout_height="@dimen/_1sdp"
        android:background="@color/HEADER_SECOND_TITLE"
        app:layout_constraintBottom_toTopOf="@+id/updateDataTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/updateDataTitle" />

    <TextView
        android:id="@+id/updateDataTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|start"
        android:text="@string/add_record"
        android:textSize="@dimen/_16sdp"
        app:layout_constraintBottom_toTopOf="@+id/updateList"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/updateList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        tools:listitem="@layout/simple_edittext_item"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/prevButton"

        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/prevButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:backgroundTint="@color/HISTORY_TEXT_COLOR"
        android:text="@string/backward"
        app:cornerRadius="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/updateNewData"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/updateNewData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        app:cornerRadius="@dimen/_10sdp"
        android:text="@string/save"
        android:backgroundTint="@color/activeStatus"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/nextButton"
        app:layout_constraintStart_toEndOf="@+id/prevButton" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/nextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forward"
        android:backgroundTint="@color/HISTORY_TEXT_COLOR"
        app:cornerRadius="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/updateNewData" />

</androidx.constraintlayout.widget.ConstraintLayout>
