<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.fragment.feature.createTest.CreateTestFragment">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/templateItem"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/_100sdp"
            android:backgroundTint="@color/BG"
            android:gravity="center"
            android:layout_margin="@dimen/_10sdp"
            android:layout_weight="0.9"
            app:cardCornerRadius="16dp"
            app:cardElevation="@dimen/_100sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:layout_weight="0.7"
                android:layout_gravity="center"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/testName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/test_name"
                        android:inputType="textAutoCorrect"
                        android:imeOptions="actionNext"
                        android:lines="1"
                        android:textColorHint="#546E7A" />

                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/testType"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/test_type"
                        android:inputType="textAutoCorrect"
                        android:imeOptions="actionNext"
                        android:lines="1"
                        android:textColorHint="#546E7A" />

                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:layout_gravity="center">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/startDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:cursorVisible="false"
                        android:imeOptions="actionNext"
                        android:focusableInTouchMode="false"
                        android:hint="@string/start_date" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/endDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:cursorVisible="false"
                        android:focusableInTouchMode="false"
                        android:hint="@string/end_date" />
                </com.google.android.material.textfield.TextInputLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:background="@drawable/list_divider" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/publishTestSwitch"
                    style="@style/TextAppearance.AppCompat.Widget.Switch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:checked="false"
                    android:text="@string/public_test"
                    android:textAllCaps="false"
                    app:useMaterialThemeColors="false"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:background="@drawable/list_divider" />
                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/notify"
                    style="@style/TextAppearance.AppCompat.Widget.Switch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:checked="false"
                    android:text="@string/notify_to_collect_data"
                    android:textAllCaps="false"
                    app:useMaterialThemeColors="false"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:background="@drawable/list_divider" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/nextStep"
            android:text="@string/next_step"
            android:layout_margin="@dimen/_10sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/HISTORY_TEXT_COLOR"
            android:elevation="@dimen/_10sdp"
            app:cornerRadius="@dimen/_24sdp"
            android:layout_gravity="bottom"/>
    </LinearLayout>
</layout>