<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragment.feature.addTest.AddFragment">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="16dp"
            android:elevation="@dimen/_16sdp"
            app:cardElevation="10dp"
            app:cardCornerRadius="@dimen/_16sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_8sdp"
                android:orientation="vertical">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/createTest"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAllCaps="false"
                    android:backgroundTint="@color/activeStatus"
                    app:cornerRadius="@dimen/_16sdp"
                    android:text="@string/create_test" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/createTestTemplate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAllCaps="false"
                    android:backgroundTint="@color/activeStatus"
                    app:cornerRadius="@dimen/_16sdp"
                    android:text="@string/create_test_template" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/createTestGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAllCaps="false"
                    android:backgroundTint="@color/activeStatus"
                    app:cornerRadius="@dimen/_16sdp"
                    android:text="@string/create_test_group" />

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>