<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="vm"
            type="com.wac.labcollect.ui.fragment.feature.shareTest.ShareTestDialogViewModel" />
    </data>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/mainBackground"
        app:cardCornerRadius="@dimen/_10sdp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp"
            >

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/qrCodeContainer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:cardCornerRadius="@dimen/_10sdp"
                app:cardElevation="@dimen/_10sdp"
                app:layout_constraintBottom_toTopOf="@+id/saveQrCode"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0">

                <ImageView
                    android:id="@+id/qrCodeImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/qr_code"
                    android:maxHeight="@dimen/_500sdp"
                    android:scaleType="centerInside"
                    tools:src="@drawable/ic_qr_code" />
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/testUrl"
                style="TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:ellipsize="marquee"
                android:focusable="true"
                android:padding="@dimen/_6sdp"
                android:singleLine="true"
                android:text="@{vm.testUrl.toString()}"
                android:textColor="@color/bloco_dark_blue"
                android:textSize="@dimen/_12ssp"
                android:textStyle="italic"
                app:layout_constraintTop_toBottomOf="@+id/qrCodeContainer"
                tools:text="@string/share_link" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:background="@color/app_divider"
                app:layout_constraintBottom_toBottomOf="@+id/testUrl" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/saveQrCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/save"
                app:cornerRadius="@dimen/_12sdp"
                app:icon="@drawable/ic_save"
                app:layout_constraintEnd_toStartOf="@+id/share_qrCode"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/share_qrCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/send"
                app:cornerRadius="@dimen/_12sdp"
                app:icon="@drawable/ic_qrcode"
                app:layout_constraintEnd_toStartOf="@+id/share_link"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/saveQrCode"
                app:layout_constraintTop_toBottomOf="@+id/divider" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/share_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/share_link"
                app:cornerRadius="@dimen/_12sdp"
                app:icon="@drawable/ic_link"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/share_qrCode"
                app:layout_constraintTop_toBottomOf="@+id/divider" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</layout>